--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     font-family: 'Doto';
     font-size: 90px
 }
+
 .welcome.visible2 {
     opacity: 1;
 }
@@ -19,9 +20,8 @@
     transition: opacity 4s ease-in-out;
     font-family: 'Nixie One';
     font-size: 3ch;
-    color:rgb(0, 0, 0);
-    
 }
+
 .fade-in.visible {
     opacity: 1;
 }
@@ -86,5 +86,34 @@
 .nav-item{
     font-size: 20px;
     color: black;
+}
+
+.tarjeta_experience{
+    padding-top: 40px;
+    margin: 50px;
+}
+.price_travel{
+    padding-top: 90px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 90px;
+}
+.automundial_logo{
+    padding: 20px;
+}
+.grupo_exito{
+    padding: 20px;
+}
+.titulo_experiencia{
+    padding-top: 50px;
+    text-align: center; 
+}
+.titulo_experiencia h1{
+    font-size: 90px;
+    font-family: 'Doto';
+}
+.titulo_experiencia p{
+    padding-top: 20px;
+    font-size: 20px;
 }
 
