--- a/css/style.css
+++ b/css/style.css
@@ -116,4 +116,12 @@
     padding-top: 20px;
     font-size: 20px;
 }
+.historia{
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-family: 'Doto';
+    font-size: 90px;
+}
+
 
