--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@
 .titulo_experiencia p{
     padding-top: 20px;
     font-size: 20px;
+    
 }
 .historia{
     text-align: center;
@@ -123,5 +124,95 @@
     font-family: 'Doto';
     font-size: 90px;
 }
+.imagen_brey{
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+}
+.breyner_saludando {
+    width: 100%; /* Ajusta el ancho al 100% del contenedor */
+    height: auto; /* Mantiene la proporción de la imagen */
+}
+.contenedor_historia{
+    font-size:2.5ch;
+}
+.contenedor_historia_c {
+    align-items: center;
+}
+.contenedor_habilidades{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 100%;
+    padding-bottom: 100px;
+    
+}
+.habilidades_h1{
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-family: 'Doto';
+    font-size: 90px;
+}
+.scrollspy-example {
+    position: relative;
+    height: 350px; /* Ajusta la altura según tus necesidades */
+    overflow-y: scroll;
+    padding: 1rem;
+    border: 1px solid #ddd;
+    background-color: #f8f9fa;
+  }
+  .scrollspy-example li{
+    list-style-type: none;
+  }
+  .simple-list-example-scrollspy .active {
+    background-color: #000000; /* Color de fondo para el enlace activo */
+    color: white; /* Color del texto para el enlace activo */
+  }
 
+  .estilo_link {
+    color: #000000; /* Color del enlace */
+    text-decoration: none; /* Quitar el subrayado */
+    transition: transform 0.2s; /* Transición suave para la animación */
+    
+  }
+  
+  .estilo_link:hover {
+    color: #00ff88; /* Color del enlace al pasar el ratón */
+    text-decoration: underline; /* Subrayado al pasar el ratón */
+    animation: heartbeat 1s infinite; /* Añadir la animación de palpito */
+  }
+  
+  @keyframes heartbeat {
+    0%, 100% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+  }
+
+  @keyframes bounceIn {
+    0% {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    60% {
+      transform: scale(1.2);
+      opacity: 1;
+    }
+    80% {
+      transform: scale(0.9);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  .bounce-modal .modal-dialog {
+    animation: bounceIn 0.5s;
+  }
+ 
 
